--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="./static/js/libgif.js"></script>
+    <script type="text/javascript" src="./static/js/rubbable.js"></script>
   </body>
 </html>
